# justrunthis

./: .gitignore  AGENT.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
app/: CMakeLists.txt
docs/: CONTRIBUTING.md
samples/: hello.cpp
src/: CMakeLists.txt  CppRunner.cpp  CppRunner.h  MainWindow.cpp  MainWindow.h  main.cpp
src/runners/: CMakeLists.txt  CppRunner.cpp
src/windows/: CMakeLists.txt  MainWindow.h
